refactored; added readme file; added simple run.sh script